price range numbers don't glitch anymore if you go slow, (fixed the logic of the price gap)
made some changes on search for an offer so even if u put other than the images that i did they'll stay the same dimension without moving

--- a/pages/detailed-offers-pages/detailed-offer-1.css
+++ b/pages/detailed-offers-pages/detailed-offer-1.css
@@ -75,7 +75,7 @@ input:focus {
     min-height: 600px;
     border-radius: 25px;
 }
-.small-img{
+.small-img, .big-img{
     cursor: pointer;
 }
 /* Show the modal and its content */
