--- a/pages/special-offers_page/special_offers_page.css
+++ b/pages/special-offers_page/special_offers_page.css
@@ -203,7 +203,7 @@ select {
 .price-input-container {
     width: 100%;
     border-radius: 15px;
-    width: 546px;
+    width: 506px;
 }
 
 .price-input .price-field {
@@ -215,12 +215,15 @@ select {
 
 .price-field input {
     border: none;
-    max-width: 76px;
+    max-width: 100px;
+    min-width: 100px;
     font-size: 17px;
     background-color: transparent;
     font-weight: 450;
 }
-
+.max-input{
+    text-align: right;
+}
 .price-field input:focus {
     border: none;
     outline: none;
